Fixed bugs on mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,14 +258,14 @@ body {
 
 /*======PROGRAMM======*/
 .programm {
-    margin-top: -15px;
+    margin-top: -36px;
     padding-top: 15px;
-    padding-bottom: 59px;
+    padding-bottom: 89px;
     background-image: url("../img/programm_bg-mobile.png");
     background-position: 0 -124px;
     background-size: 103%;
 }
-.block-title__content-programm {
+.block-title__content.block-title__content-programm {
     margin: 15px 10px 15px 10px;
     border-bottom: 1px solid #fff;
 }
@@ -385,7 +385,7 @@ body {
 }
 /*======FORM======*/
 form {
-    padding: 0 44px;
+    padding: 0 17px;
 }
 .form__title {
     margin-bottom: 21px;
